[project]
name = "skin-care-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "base64io>=1.0.3",
    "fpdf2>=2.8.4",
    "gtts>=2.5.4",
    "nest-asyncio>=1.6.0",
    "openai>=1.99.9",
    "openai-agents>=0.2.6",
    "pillow>=11.3.0",
    "pyaudio>=0.2.11",
    "pydub>=0.25.1",
    "pygame>=2.6.1",
    "python-dotenv>=1.1.1",
    "requests>=2.32.4",
    "speechrecognition>=3.14.3",
    "streamlit>=1.48.1",
]
