[project]
name = "skin-care-agent"
version = "0.1.0"
description = "Advanced Skin Care AI Assistant with multi-agent AI system"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "streamlit>=1.48.1",
    "openai>=1.99.9",
    "python-dotenv>=1.1.1",
    "fpdf2>=2.8.4",
    "requests>=2.32.4",
    "pillow>=11.3.0",
    "pyaudio>=0.2.14",
]
